# haptic-teleoperation-network-protocols

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: installation_guide.md  protocol_comparison.md  troubleshooting.md  usage_guide.md
experimental-results/dccp/: dccp_client_output.txt  dccp_server_output.txt
experimental-results/quic/: quic_server_output.txt
experimental_results/raw_data/quic/: quic_client_output.txt
experimental_results/raw_data/sctp/: sctp_client_output.txt  sctp_server_output.txt
scripts/: build_all.sh
scripts/experiments/: run_all_experiments.sh  run_quic_experiment.sh
scripts/setup/: install_dependencies.sh
src/dccp/client/: dccp_haptic_client.cpp
src/dccp/server/: dccp_haptic_server.cpp
src/quic/client/: quic_haptic_client.cpp
src/quic/server/: quic_haptic_server.cpp
workspaces/dccp_haptic_ws/: README_DCCP_ROS2.md
workspaces/dccp_haptic_ws/src/dccp_haptic/: CMakeLists.txt  package.xml
workspaces/dccp_haptic_ws/src/dccp_haptic/launch/: dccp_client.launch.py  dccp_haptic_system.launch.py  dccp_server.launch.py
workspaces/dccp_haptic_ws/src/dccp_haptic/src/: dccp_haptic_client.cpp  dccp_haptic_server.cpp
workspaces/quic_haptic_ws/: README_QUIC_ROS2.md
workspaces/quic_haptic_ws/src/quic_haptic/: CMakeLists.txt  package.xml
workspaces/quic_haptic_ws/src/quic_haptic/launch/: quic_client_launch.py  quic_server_launch.py  quic_system_launch.py
workspaces/quic_haptic_ws/src/quic_haptic/src/: quic_haptic_server.cpp
workspaces/sctp_haptic_ws/: README_SCTP_ROS2.md
workspaces/sctp_haptic_ws/src/sctp_haptic_teleoperation/: CMakeLists.txt  package.xml
workspaces/sctp_haptic_ws/src/sctp_haptic_teleoperation/launch/: sctp_client.launch.py  sctp_haptic_system.launch.py  sctp_server.launch.py
workspaces/sctp_haptic_ws/src/sctp_haptic_teleoperation/src/: sctp_haptic_client.cpp  sctp_haptic_server.cpp
